--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,9 +8,9 @@
     <form method="POST" enctype="multipart/form-data" th:action="@{/csv}">
 
         パッケージ名<br/>
-        <input type="text" name="packageName" />
+        <input type="text" name="packageName" /><br /><br />
         ベースクラス名<br />
-        <input type="text" name="baseClassName" /><br />
+        <input type="text" name="baseClassName" /><br /><br />
 
 
 
